# uhf-rfid

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  RFID_PROTOCOL.md  U6-CU-91_V02_c.bin.c  fw.c  fw.h  fw.lst  rfid_reader.elf  stm32f103.ld  syscalls.c
rev_eng/: U6-CU-91_V02_c.bin.c  fw.c  fw.h
rust_src/rust_src/: Cargo.toml
rust_src/rust_src/src/: gpio.rs  iwdg.rs  main.rs  memmap.rs  nvic.rs  rcc.rs  rfid.rs  systick.rs  uart.rs  utils.rs
src/: fw.c  fw.h  gpio.c  gpio.h  hal.c  hal.h  interrupts.c  interrupts.h  iwdg.c  iwdg.h  iwdg_types.h  main.c  main.h  memmap.h  nvic.c  nvic.h  nvic_types.h  rcc.c  rcc.h  rfid.c  rfid.h  rfid_types.h  stdint.h  string.c  string.h  stubs.c  stubs.h  system.c  system.h  system_types.h  systick.c  systick.h  systick_types.h  uart.c  uart.h  usart_regs.h  utils.c  utils.h  wfi.s
